--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,16 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="string_splash01">您需要同意相关协议内容才能继续 使用欧文时光，若您不同意，很遗 憾我们将无法为您提供服务</string>
     <string name="string_notice">拼团即将要在5月20日上线啦！~~~ 爆款来袭5折 起，抄底直降无套路！！！</string>
+    <string name="string_getsms">获取验证码</string>
+    <string name="string_login">登录</string>
+    <string name="hint_sms">请输入短信验证码</string>
+    <string name="string_aggrument">我已阅读并同意</string>
+    <string name="string_skip">跳过</string>
+    <string name="string_uphead">点击上传头像</string>
+    <string name="string_wancheng">完成</string>
+    <string name="label_name">用户名</string>
+    <string name="label_sex">宝宝性别</string>
+    <string name="label_his">宝宝出生日期</string>
+    <string name="hint_nick">请输入宝贝昵称</string>
+    <string name="string_boy">男</string>
 </resources>
