--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="string_recommend">为你推荐</string>
     <string name="string_buy">购买</string>
     <string name="string_share">完成本视频内容，进行分享之后解锁下一视频。</string>
+    <string name="order_empty">您还没有购买相关的订单</string>
+    <string name="string_ordernum">单号</string>
 </resources>
