--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="huodong_notice">促销福利、最新活动等通知</string>
     <string name="service_notice">服务通知</string>
     <string name="select_sex">请选择宝宝性别</string>
+    <string name="course_empty">课程列表为空</string>
 </resources>
